--- a/stopwatch.html
+++ b/stopwatch.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Stopwatch</title>
+    <title>Stopwatch Pro</title>
     <link rel="stylesheet" href="stopwatch.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Stopwatch</h1>
+        <h1>Stopwatch Pro</h1>
         <div class="stopwatch">
             <div class="time-display">00:00:00.000</div>
             <div class="controls">
                 <button id="startStop">Start</button>
+                <button id="lap">Lap</button>
                 <button id="reset">Reset</button>
             </div>
+        </div>
+        <div class="lap-times">
+            <h2>Lap Times</h2>
+            <ul id="lapList"></ul>
         </div>
     </div>
     <script src="stopwatch.js"></script>
